--- a/JavaDemoGithubPractice/app/build.gradle
+++ b/JavaDemoGithubPractice/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -29,10 +30,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    configurations {
-        all*.exclude group: 'com.android.support', module: 'support-v13'
-    }
-
     ext.DATAAUTOACCESS_VERSION = '1.2.8'
     ext.BUTTERKNIFE_VERSION = '8.7.0'
     ext.GREEN_DAO_VERSION='3.2.2'
@@ -60,24 +57,26 @@ dependencies {
     ext.CONSTRAINT = '1.1.3'
 
 
+    ext.androidx_version = '1.0.0'
+
+
     implementation 'net.colindodd:gradientlayout:1.2'
 
     implementation "com.android.support.constraint:constraint-layout:${CONSTRAINT}"
-    implementation "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-
-    implementation "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
-    implementation "com.android.support:support-vector-drawable:${ANDROID_SUPPORT_VERSION}"
-    implementation "com.android.support:preference-v7:${ANDROID_SUPPORT_VERSION}"
-    implementation "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
-    implementation "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
+    implementation "androidx.appcompat:appcompat:$androidx_version"
+    implementation "androidx.recyclerview:recyclerview:$androidx_version"
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation "androidx.cardview:cardview:$androidx_version"
+    implementation "androidx.vectordrawable:vectordrawable:${androidx_version}"
+    implementation "androidx.preference:preference:${androidx_version}"
+    implementation "androidx.legacy:legacy-preference-v14:${androidx_version}"
+    implementation "androidx.browser:browser:${androidx_version}"
 
     implementation "com.thirtydegreesray:dataautoaccess:${DATAAUTOACCESS_VERSION}"
     annotationProcessor "com.thirtydegreesray:dataautoaccess-compiler:${DATAAUTOACCESS_VERSION}"
 
-    implementation "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
-    annotationProcessor "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_VERSION}"
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
     implementation "org.greenrobot:greendao:${GREEN_DAO_VERSION}"
     implementation "org.greenrobot:eventbus:${EVENT_BUS_VERSION}"
@@ -111,7 +110,11 @@ dependencies {
     implementation "com.afollestad.material-dialogs:core:${MATERIAL_DIALOG_VERSION}"
     implementation "com.afollestad.material-dialogs:commons:${MATERIAL_DIALOG_VERSION}"
 
+    implementation "androidx.room:room-runtime:2.1.0-alpha04"
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha04'
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
+
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
