successfully day add repositories and repository detail,fix bugs modified arhictecture

--- a/JavaDemoGithubPractice/app/src/main/AndroidManifest.xml
+++ b/JavaDemoGithubPractice/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTask"/>
 
+
+        <activity android:name=".ui.activity.RepositoryActivity" android:label="@string/repository"/>
+
     </application>
 
 </manifest>
