--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".ui.activity.MainActivity"
             android:label="@string/app_github_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTask"
+            android:launchMode="singleInstance"
             />
 
 
